# hexmoire-backend

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
src/: app.py
src/bots/: __init__.py  base.py  registry.py
src/bots/steam/: headers.py  items.py
src/bots/steam/automations/: login.py
src/bots/steam/crawlers/: achievements.py  auth.py
src/core/: settings.py
src/core/db/: engine.py  session.py
src/core/db/migrations/: env.py
src/core/db/migrations/versions/: 3f07c784b7e8_initial.py  fc9d0e5f2021_initial.py
src/core/db/models/: __init__.py
src/core/db/models/mixins/: primary_key.py  timestamp.py
src/core/db/models/steam/: achievements.py
src/core/db/models/users/: user.py
src/core/security/: hash.py
src/dependencies/: database.py
src/infra/browser/: __init__.py  client.py  config.py
src/infra/http/: __init__.py  client.py  config.py  rate_limiter.py
src/repositories/sql/: achievement.py  user.py
src/routers/: router.py
src/routers/v1/: router.py
src/routers/v1/bots/: router.py  schemas.py
src/routers/v1/users/: dependencies.py  router.py  schemas.py  service.py
src/tasks/: __init__.py  broker.py  steam.py
src/utils/: datetime.py  text.py
