[project]
name = "hexmoire-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "pwdlib[argon2]>=0.3.0",
    "pydantic[email,emailstr]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
    "taskipy>=1.14.1",
]

[tool.ruff]
extend-exclude = ['migrations']
line-length = 120

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']
ignore = ['E501', 'I001', 'PLR1702', 'PLR0913', 'PLR0917']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
up = 'docker-compose up -d --build'
run = 'uvicorn src.app:app --reload --reload-dir src'
format = 'ruff format'
tree = 'tree /F'
makemigrations = 'alembic revision --autogenerate -m'
migrate = 'alembic upgrade head'
